# manage-my-skills

./: .gitignore  README-en.md  README.md  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: bump-version.js
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs_ops.rs  lib.rs  main.rs  models.rs  registry.rs  scanner.rs  settings.rs  sync_plan.rs  trash.rs
src/components/: SettingsSheet.tsx  shared.tsx
src/lib/: demoData.ts  skillUtils.ts
src/styles/: base.css  discovery.css  settings.css  skills.css
src/views/: DiscoveryView.tsx  SkillsView.tsx
