[package]
name = "manage-my-skills"
version = "0.2.7"
description = "Desktop workbench for local Agent Skills"
authors = ["Manage My skills"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "oh_my_skills_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
